add layout to blog pages

--- a/apps/nextjs/src/pages/blog/page.mdx
+++ b/apps/nextjs/src/pages/blog/page.mdx
@@ -1,7 +1,13 @@
-My MDX page
+# Titlu
 
-This is a list in markdown:
+Exemplu pagina
 
-- One
-- Two
-- Three
+```js
+
+// comment
+const testJS = [
+    'a',
+    'b'
+    'c'
+]
+```
